--- a/configs/ytest_config_default.json
+++ b/configs/ytest_config_default.json
@@ -3,8 +3,8 @@
         "buy":["b"],
         "sell":["g"],
         "exit":["x","t"],
-        "prev":["a"],
-        "next":["d"],
+        "prev":["a","left"],
+        "next":["d","right"],
         "m01":["1"],
         "m15":["3"],
         "h01":["4"],
