--- a/configs/ytest_config_default.json
+++ b/configs/ytest_config_default.json
@@ -3,8 +3,10 @@
         "buy":["b"],
         "sell":["g"],
         "exit":["x","t"],
-        "prev":["a","left"],
-        "next":["d","right"],
+        "prev_micro":["A"],
+        "next_micro":["D","e"],
+        "prev_macro":["a","left"],
+        "next_macro":["d","right"],
         "m01":["1"],
         "m05":["2"],
         "m15":["3"],
